# boi

./: .boi-policy.toml  .dockerignore  .gitignore  .gitleaksignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.e2e  HEAD  LICENSE-APACHE  LICENSE-MIT  Makefile  ORIG_HEAD  README.md  SKILL.md  boi.sh  buf.gen.yaml  buf.yaml  clippy.toml  daemon.py  daemon.sh  dashboard.sh  docker-compose.yml  fly.toml  gitdir  guardrails.toml  index  install-public.sh  install.sh  justfile  pyproject.toml  rustfmt.toml  worker.py  worker.sh
.cargo/: audit.toml
.sqlx/: query-0dac7b3220c0a147ca504451741daf9b6f98bbb6b8bc09a7c6d998f1867325eb.json  query-0ed47f217704638c320f24b1ca2888594e14fcb6c238d11ea4826d71756bfa96.json  query-17d55a62741fae5efdb4313965ced38e4c7ef09f48a13a26e5a7b2333b330e68.json  query-1faed370f97140ff45f11e5a9d3bb2f8387b0ef1c0b7becea04e4a01c9a37cf9.json  query-2637bc0b0a137f85d9ed7bed732239640b1534789008068673560b33c761647a.json  query-3400ec12f87cdf15d8e1dd9c98a02d97e975199678e1b104d10b111f953d2cb9.json  query-36877fe560af5cfa91caa570ae21c9538d271967883901ad275e253c4380956e.json  query-47445bb18fc1a3e21e8b3b3920a7efbc74c997cebeed242a9581ef74574e5922.json  query-589d20b3bd764060d7acb6ae9877cea3a7765c2a5aaa878ab039056d6293bce6.json  query-60e83d47a33e30c459913b4aa63512db66bb7c09dbd264c40f788540f8da88c5.json  query-60fc2900517851537a7d9cfd72d29eb3937e4ce72f5b1473fb580862af6fe2ab.json  query-68e44d3ee7fddd0fd4fe1f88f4638e1bba0248c1df3386be9e4f2d7c65ef4baf.json  query-6d26a7e765ddfd16fa5c94a799b1fcdb43206cc958139b1e2fffdf482786d6b9.json  query-75f075403fefbd9749569749e4a99241397734f310afef09ffd9c4a52f33e3e8.json  query-765982b0d0ed5dd7637e2bf504e95ad75f8bdeb11b1bf35d92edb16934855919.json  query-78617e7c35dfa0939fc1ced0d22e7786574749f81fef87665c98faec122eec0d.json  query-7f1efa6e2b5dfc4d3d34a091f17283e0b9aa8fdd22c2de1434145e58d50bf785.json  query-90e461aa647b3bcde7434bef79daa262f21547b5f929ba4475269ef9141d09ac.json  query-90e4ad7678ef9cffe89f44db395f1bf3808681e48a99a2f86977e794f4d2db2a.json  query-920f7a540114f4389df0c6591db862efab7fe9cadf69367d08911f2ff2439432.json  query-a60a30723823c19b1672b1cab7d4e5ef51c2be0991e417367158da7a0e38a4a5.json  query-a81bc49450d9afe4f2f986575d4e692150d560253a032bb57fcdc7de58525458.json  query-a868207d4ed61f954dbfa4c3c6864d416e2bacd4cc475a2f3e19ec0097261f92.json  query-b4ee0caca9bcfe25af446ad784c42beedc32a154bc163fc3ddf22d2601b250d5.json  query-b62048501a5e6c87ab05e5f9845263e9db96ec4519710116f32e4d93dbc467e9.json  query-b6dd5990f226e149c089525808f6e66516ca7a3a05f49454cd8078c83d16dde4.json  query-bc925c9faa4c64ae84677ca3504f0bb8deb38868e882c03d8d4e9f9efefc1224.json  query-c334d755efd3cfa41a4b75f7b80b292aed01934a7f442f07f63557d6192faf8e.json  query-c4c092362569b57f7f503c63efa453cda99e5a1af49db6f0d9dc643fb7e2f9c7.json  query-cb5a5851e2a5e2172b9a340fe1a13700a27b2f66db1639bad2804e3495136827.json  query-cc5833fe7c04b74d1c3cd9c34a837ec46c393ef892ad243f385cb2d815e02ca1.json  query-ce39cdc0838bfc3215ab2778f3eb6f5cb465e51c07b0acc2a81dd95f5e8fd605.json  query-d162c50967dc58b42d446d78d74c9a9ead77f3afa0ccb345fbaba7d4369dc214.json  query-d1e2df0e34d986be63822ad5d2604806a0ba56779654e596a8e27b859c9875f7.json  query-d6fec5e94f1e78143a33cb40e69dd4de66e02127114709788a73ac6b49ddcde1.json  query-e320725ff8b88591fb18cdf66e464d2f98a4e689159c2eb6879a57a98bda02a7.json  query-e6c981cbc5d79bdfc1539ff4b1d7f0e500c9323865982acf743c3a8d5f88015d.json  query-ecaff02ddd023034b8d864d658022417e01e8e2bb991314320a893c31b34fd8e.json  query-f00627283e2bc6891bfb7be50d7acae2c02a957dd0a89b826b47c87a03583bf7.json  query-f2389480f6bb2140d82fdc47b2491cee8d98ccca6e6dfeece63a21f04383af8e.json
archive/: worker.sh
crates/boi-assign/: Cargo.toml
crates/boi-assign/src/: assign.rs  cooldown.rs  hrw.rs  lib.rs
crates/boi-cluster/: Cargo.toml
crates/boi-cluster/src/: claims.rs  client.rs  dispatch_queue.rs  hooks_hwm.rs  lib.rs  membership.rs  nodes.rs  testutil.rs
crates/boi-identity/: Cargo.toml
crates/boi-identity/src/: admin.rs  ca.rs  join_token.rs  lib.rs  mtls.rs
crates/boi-mock-plugin/: Cargo.toml
crates/boi-mock-plugin/src/: main.rs
crates/boi-node/: Cargo.toml
crates/boi-node/src/: main.rs
crates/boi-plugin-host/: Cargo.toml
crates/boi-plugin-host/src/: handshake.rs  hooks.rs  lib.rs  lifecycle.rs  pool.rs  provisioner.rs  router.rs  workspace.rs
crates/boi-test-harness/: Cargo.toml  Makefile  README.md
crates/boi-test-harness/docker/: boi-node.Dockerfile  docker-compose.yaml  etcd-readiness.sh
crates/boi-test-harness/src/: lib.rs
crates/boi-test-harness/tests/: e2e_assignment.rs  e2e_bootstrap.rs  e2e_degraded.rs  e2e_fencing.rs  e2e_fresh_install.rs  e2e_hooks_audit.rs  e2e_plugin_lifecycle.rs  e2e_provisioning.rs  e2e_stdout_tail.rs  smoke.rs
critic/: config.json
demo/: README.md  demo.tape  spec.toml
docker/: Dockerfile  entrypoint.sh
docs/: .bench_raw.json  architecture.md  assessment-2026-03-16.md  bench-bare-flag-2026-04-29.md  bench-openrouter-2026-04-29.md  boi-current-state.md  boi-do.md  boi-hooks-spec.md  boi-migration-plan.md  boi-model-selection.md  boi-rust-architecture.md  brain-directory.md  code-model-audit.md  code-review-2026-04-29.md  context-injection.md  critic-eval-integration-notes.md  critic.md  daemon.md  dag-reassess.md  design-draft-specs-and-deps.md  faq.md  fly-io-setup.md  getting-started.md  llm-cold-start-benchmarks.md  modes.md  nested-boi-design.md  optimization-plan-2026-04-29.md  performance-analysis-2026-04-29.md  phase-configurability-2026-05-12.md  pipelines.md  projects.md  providers.md  refactor-results-2026-03-16.md  reliability-review-2026-04-29.md  remote-dispatch.md  security.md  spec-format.md  telemetry.md  test-coverage-audit-2026-04-29.md  yaml-spec-schema.md
examples/: cli-tool.md  hello-world.md
hooks/: default.yaml
lib/: cli_ops.py  coordination.py  coordination_migrate.py  critic.py  critic_config.py  daemon_ops.py  dag.py  db.py  do.py  (+23 more)
reference-plugins/provisioner-docker/: Cargo.toml
reference-plugins/provisioner-docker/src/: main.rs
(+628 files in other folders)
