[package]
name = "boi"
version = "1.3.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
glob = "0.3"
toml = "0.8"
signal-hook = "0.3"
libc = "0.2"
rand = "0.8"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rust_decimal = "1"
thiserror = "1"
anyhow = "1"

[profile.release]
strip = true
lto = true
