[package]
name = "boi-cluster"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
etcd-client = "0.14"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
testcontainers = "0.20"
tokio = { version = "1", features = ["full"] }
