[package]
name = "boi-identity"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rcgen = { version = "0.12", features = ["pem", "x509-parser"] }
thiserror = "1"
rustls-pemfile = "2"
x509-parser = { version = "0.16", features = ["verify"] }
tonic = { version = "0.12", features = ["tls", "transport"] }
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
boi-cluster = { path = "../boi-cluster" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
tonic-health = "0.12"
tokio-stream = { version = "0.1", features = ["net"] }
testcontainers = "0.20"
