[package]
name = "boi-mock-plugin"
version = "0.1.0"
edition = "2021"
description = "In-tree mock plugin binary for e2e testing (Handshake + Emit + SIGUSR1 crash)."

[[bin]]
name = "boi-mock-plugin"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1"
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "signal", "time"] }
boi-proto = { path = "../boi-proto" }
