[package]
name = "boi-node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "boi-node"
path = "src/main.rs"

[dependencies]
boi-plugin-host = { path = "../boi-plugin-host" }
boi-cluster = { path = "../boi-cluster" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "time", "sync", "signal"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
