[package]
name = "boi-plugin-host"
version = "0.1.0"
edition = "2021"
description = "Plugin host — spawns plugin children, runs the BOI_READY handshake, manages restart policy, and exposes per-plugin gRPC clients."

[dependencies]
boi-proto = { path = "../boi-proto" }
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "time", "fs", "sync"] }
tokio-stream = "0.1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
futures = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util", "rt-multi-thread", "macros", "process", "io-util", "time", "fs", "sync"] }
