[package]
name = "boi-provisioner-docker"
version = "0.1.0"
edition = "2021"
description = "Reference Docker provisioner plugin for BOI — spawns boi-node containers on demand."

[[bin]]
name = "boi-provisioner-docker"
path = "src/main.rs"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "process", "time"] }
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
prost-types = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
boi-proto = { path = "../../crates/boi-proto" }
